--- a/Phishing v2/manifest.json
+++ b/Phishing v2/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Anti-phisher",
-  "description": "Данное расширение разработано Голиковым Михаилом Вячеславовичем под руководством Ануфриева В.Ю.",
+  "description": "Это расширение служит для обнаружения мошеннических сайтов. Разработано Голиковым Михаилом Вячеславовичем под руководством Ануфриева В.Ю.",
   "version": "1.1",
   "icons": {
 	"128": "128.png"
